--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   url_launcher: ^6.3.0
   dartz: ^0.10.1
   intl: ^0.20.2
+  just_audio: ^0.9.36
+  audio_service: ^0.18.12
+  just_audio_background: ^0.0.1-beta.17
 
   flutter_localizations:
     sdk: flutter
